<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="232dp"
        android:layout_height="148dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/topicRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/topic"
            tools:visibility="visible" />

        <RadioButton
            android:id="@+id/authorRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/author" />

        <RadioButton
            android:id="@+id/dateRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/radioGroup2"
        android:layout_width="235dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.58"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        tools:visibility="visible">


        <RadioButton
            android:id="@+id/radioButton1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radiobutton1"
            android:visibility="visible" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radiobutton2"
            android:visibility="visible" />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radiobutton3"
            android:visibility="visible" />

        <RadioButton
            android:id="@+id/radioButton4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radiobutton4"
            android:visibility="visible" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>